# weather-panel

./: .dockerignore  README.md  docker-compose.yaml
weather-backend/: Cargo.toml
weather-backend/src/: main.rs
weather-frontend/: package-lock.json  package.json
weather-frontend/public/: index.html
weather-frontend/src/: App.js
weather-micro/: Cargo.toml  Dockerfile
weather-micro/src/: main.rs
weather-server/: Cargo.toml  Dockerfile
weather-server/src/: main.rs
weather-server/templates/: root.html.hbs  root.html.tera  weather.html.hbs  weather.html.tera  weather_view.html.hbs
weather-server/templates/components/: error_display.html.tera  weather_query.html.tera  weather_view.html.tera
weather-server/templates/layouts/: main.html.tera
weather-utils/: Cargo.toml
weather-utils/src/: lib.rs  models.rs  testdata.json
