[package]
name = "weather-micro"
version = "0.1.0"
edition = "2021"

[dependencies]
weather-utils = {path = "../weather-utils" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
